test_cases/pass/p28.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
DECLARE BOOL result
x=7
result=(x > 5 AND x < 10)
PRINT: result
END SCRIPT
