test_cases/fail/f39.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL a
DECLARE INT x
DECLARE BOOL result
a="TRUE"
x=5
result=(a OR x)
END SCRIPT
